Node_Package/Node_control_validation_ws/control_validation_ws/log/build_2021-02-23_16-13-19/control_validation/stderr.log
  File "/home/acclivis/script/Node_control_validation_ws/control_validation_ws/install/control_validation/lib/python3.6/site-packages/control_validation/control_subscriber.py", line 23
    global framenum = 0
                    ^
SyntaxError: invalid syntax

